move codes to the root

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "dist/index.js",
   "scripts": {
-    "start": "bun src/cli.ts",
+    "start": "bun cli.ts",
     "test": "bun test",
     "build": "tsc"
   },
