fix search command error

--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "AI-powered tools for web scraping and searching",
   "type": "module",
-  "main": "dist/index.js",
+  "bin": {
+    "ai-tools": "./cli.ts"
+  },
+  "main": "./cli.ts",
   "scripts": {
     "start": "bun cli.ts",
     "test": "bun test",
@@ -11,6 +14,7 @@
   },
   "dependencies": {
     "commander": "^11.1.0",
+    "node-html-parser": "^7.0.1",
     "openai": "^4.24.1",
     "playwright": "^1.40.1"
   },
