--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-tools",
+  "name": "grigri-ai-tools",
   "version": "1.0.0",
   "description": "AI-powered tools for web scraping and searching",
   "type": "module",
